ZGPullTable into PCH file

--- a/Mark1/Podfile
+++ b/Mark1/Podfile
@@ -10,4 +10,5 @@ pod 'UIImageView-LVUtils', '~> 0.0.1'
 pod 'UIImage-Resize', '~> 1.0.1'
 pod 'SDWebImage-ProgressView', '~> 0.3.1'
 pod 'Reachability', '~> 3.1'
-pod 'RTAlertView', '~> 0.0'
+pod 'RTAlertView', '~> 0.0.6'
+pod 'ZGPullDragTableView', '~> 0.0.1'
