--- a/Mark1/Podfile
+++ b/Mark1/Podfile
@@ -9,3 +9,5 @@ pod 'SDWebImage-ProgressView', '~> 0.3.1'
 pod 'Reachability', '~> 3.1'
 pod 'RTAlertView', '~> 0.0.6'
 pod 'ZGPullDragTableView', '~> 0.0.1'
+pod 'UIColorCategories', '~> 0.1.0'
+pod 'UIColor-Utilities', '~> 1.0.1'
