--- a/Mark1/Podfile
+++ b/Mark1/Podfile
@@ -12,3 +12,4 @@ pod 'ZGPullDragTableView', '~> 0.0.1'
 pod 'UIColorCategories', '~> 0.1.0'
 pod 'UIColor-Utilities', '~> 1.0.1'
 pod 'NSUserDefaults-AESEncryptor', '~> 0.0.4'
+pod 'MWPhotoBrowser', '~> 1.4.0'
